# PAOO_project3

./: CMakeLists.txt  run.sh  unsafe_file.txt
inc/: Student.hpp
res/: unsafe_file.txt
src/: CMakeLists.txt  safe_writer.cpp  unsafe_writer.cpp
